brackets after the features/fixes that the person contributed.  A list of
contributors can be found at the end of this document.  If all changes in a
specific alpha release have been made by the same person, the person is
only mentioned in the headline of that alpha release, rather than after
each feature.

Current Beta (not yet released)
-------------------------------
    - Fix: The "EXCEPT" statement did not work as stated in the doc,
      (where it says that it applies to all node numbers following the
      EXCEPT keyword, and you have to specify another EXCEPT to undo the
      first one), but it did only apply to the nodenumer immediately 
      following the "EXCEPT". ATTENTION! THIS MAY BREAK EXISTING
      CONFIGURATION FILES! CAREFULLY CHECK YOUR USAGE OF THE EXCEPT 
      KEYWORD!!! [TE]
    - Fix: The "EXCEPT" statement did not work for "FROM" routes (EXCEPT
      clauses were always considered as applying to the "TO" mask). [TE]
    - Fix: Routing dependent on the day of the week did not work on Sundays
      (i.E. "U" was not recognised as specifying Sunday in the route
      statement). [TE]

0.95a [TE]
-----------
    - Cleaned up the source code tree, moved things into subdirectories,
      wrote documentation on how to compile the code, etc. Generally,
      it is now much more easy for other programmes to contribute to
      CFRoute.
    - Enabled the Squish interface. Use "Netsquish" to define a Squish
      netmail area. This code is experimental. Do not use on production
      systems. Please send bug reports.
    - Added a Linux version. (other Unixes to follow later).
    - Bit 11 of the attibute word in a mail is now recognised as "Direct"
      flag, as used by Timed, Msged and others.
    - Change in VIABOSSDIRECT behaviour. This keyword specifies that direct
      mail to a point should be routed via his boss. The change is that
      if the boss of the point is ourselves (i.E. if the node part of the