@@ -227,6 +227,20 @@ defined.  This is a list of the verbs that may be used.
   Example:
   PASSWORD EXAMPLE 2:341/70 62
 
+- RECODE recodmapefile
+  Just do not use this feature.
+  FTSC documents FTS 0054 and the superseding FSP 1013 define a way how to
+  handle mails with different charsets (e.G. CP866 and KOI8-R) correctly, by
+  inserting a CHRS kludge into the mail. If you have a mail reader that can
+  handle this, you don't need the RECODE feature, and you'd really better
+  fix your mail reader.
+  If you still want to use this, it works as follows: The argument is a
+  recoding file name in the format as it is also used by hpt. All inbound
+  mail will be recoded according to this map, and all outbound mail will be
+  recoded in the other direction. This can be used as a temporary workaround
+  for KOI8-R systems in Russia that do not yet have a mail reader that
+  supports cyrillic recoding according to the CHRS kludge.
+
 - INCLUDE filename
   Processes a file  as part of the  configuration. Include's can be
   nested, i.e. you  can call a  new file from a file  already being
